# WINREC

./: .gitignore  App.xaml  App.xaml.cs  IT-AUDIT.md  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  README.md  RegionPicker.cs  WINREC.csproj  WindowPicker.cs
python/: README.md  install.bat  pyproject.toml
python/winrec/: __main__.py  gui.py  recorder.py  sources.py
web/: index.html
